--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Naruto !!!</h1>
     <h2>Naruto</h2>
-    <p>L'enfance de Naruto</p>
+    <p>L'enfance de Naturo et Sasuke</p>
     <h2>Naruto Shippuden</h2>
     <p>L'adolescence de Naruto</p>
     <h3>Boruto</h3>
